--- a/netlify.toml
+++ b/netlify.toml
@@ -30,3 +30,6 @@ command = "gatsby build"
   for = "/*.woff2"
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
+    
+    [[plugins]]
+package = "netlify-plugin-gatsby-cache"
